[project]
name = "template-analysis-uv"
version = "0.1.0"
description = "Template for analysis projects using uv"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

dependencies = [
    "numpy",
    "scikit-image",
    "matplotlib",
    "tifffile"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "shared"
module-root = ""