[project]
name = "pospisilik-lab-testes-analysios"
version = "0.1.0"
description = "Quick analysis of slide images."
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

dependencies = [
    "numpy",
    "scikit-image",
    "matplotlib",
    "tifffile",
    "openslide-bin>=4.0.1.2",
    "oic-toolkit",
    "openslide-python>=1.4.6",
    "cellpose>=4.2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "shared"
module-root = ""

[tool.uv.sources]
oic-toolkit = { path = "../../Toolboxes/oic-toolkit", editable = true }
